# computer-graphics-lab

./: .gitignore  .gitmodules
1/: a.c  makefile
2/: a.c  makefile
3/: a.c  makefile
4/: bayer.py  bayerFilter.txt  main.py  mosaicImage.txt
6/: makefile  my-project.cabal  stack.yaml
6/src/: Main.hs
7/: element.py  main.py
8/: main.py  stickman.py
webgl/1-cubeRotate/: fs.shader  main.js
webgl/2-sphereBounce/: index.html  main.js
webgl/base/: index.html
webgl/js/: flattened-primitives.js
webgl/temp/: index.html  main.js
